# zinio_processor

./: .gitignore  README.md  install.bat  plan1.md  pyproject.toml  requirements.txt  setup.ps1  zinio_processor.spec
local_test_output_new3/: 123456789.nhsx
local_test_output_new3/123456789 Files/: Document.xhtml  style.css
src/: __init__.py  main.py
src/core/: audio_parser.py  downloader.py  xml_generator.py
src/gui/: main_window.py  worker.py
src/utils/: api_metadata.py  config.py  logger.py  resources.py  security.py  time_formatter.py
tests/: test_audio_parser.py  test_downloader.py  test_logger.py  test_main_window.py  test_security.py  test_time_formatter.py  test_worker.py  test_xml_generator.py
