[project]
name = "zinio_processor"
version = "1.0.2"
description = "Zinio Media Processor desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "requests>=2.31.0",
    "keyring>=24.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
